<resources>
    <string name="app_name">Capital quiz</string>
    <string name="tab_text_1">Play</string>
    <string name="tab_text_2">High Scores</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_region">Choose region you want to be tested on</string>
    <string name="africa">Africa</string>
    <string name="europe">Europe</string>
    <string name="america">America</string>
    <string name="asia">Asia</string>
    <string name="oceania">Oceania</string>
    <string name="next">Next</string>
    <string name="result">Result</string>
    <string name="finish">Finish</string>
    <string name="country">Country</string>
    <string name="capital">Capital</string>
    <string name="exit">Exit</string>
    <string name="score_result">You scored %1d out of 10</string>
    <string name="question"> What is the capital of %1s?</string>
</resources>